// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>opt0</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0 <dim>(Hint 0)</bold>
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>opt0</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0 <dim>(Hint 0)</bold>
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Option 0
<cyan>│</fg>  <dim>○</bold> <dim>Option 1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Option 0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>○</bold> <dim>opt0</bold>
<cyan>│</fg>  <green>●</fg> opt1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <green>●</fg> opt0
<cyan>│</fg>  <dim>○</bold> <dim>opt1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>opt0</bold>",
  "
",
  "<cursor.show>",
]
`;
